package com.kiosk.pos.model;

public enum PurchaseStatus {
  PENDING,
  COMPLETED,
  CANCELED
}
