@startuml
' Diagrama de clases - Kiosk POS (estado actual)
skinparam classAttributeIconSize 0
hide circle

package "com.kiosk.pos.model" {
  enum PaymentMethod {
    CASH
    CARD_DEBIT
    CARD_CREDIT
    TRANSFER
    FIADO
  }

  enum PurchaseStatus {
    PENDING
    COMPLETED
    CANCELED
  }

  class Category {
    +Long id
    +String name
    +String description
  }

  class Product {
    +Long id
    +String name
    +String barcode
    +BigDecimal price
    +Integer stock
    +Integer minStock
    +LocalDate expiryDate
    +Boolean active
  }

  class Customer {
    +Long id
    +String name
    +String phone
    +String email
    +String address
    +BigDecimal creditLimit
    +BigDecimal currentDebt
  }

  class CustomerPayment {
    +Long id
    +BigDecimal amount
    +String note
    +LocalDateTime paidAt
  }

  class Sale {
    +Long id
    +LocalDateTime saleDate
    +BigDecimal total
    +PaymentMethod paymentMethod
    +Boolean isCredit
  }

  class SaleItem {
    +Long id
    +Integer quantity
    +BigDecimal unitPrice
    +BigDecimal subtotal
  }

  class Supplier {
    +Long id
    +String name
    +String phone
    +String email
    +String address
  }

  class Purchase {
    +Long id
    +LocalDateTime createdAt
    +LocalDateTime completedAt
    +PurchaseStatus status
  }

  class PurchaseItem {
    +Long id
    +Integer quantity
    +BigDecimal cost
    +BigDecimal subtotal
  }

  ' Relaciones
  Category "1" --> "0..*" Product : products
  Product  "1" --> "0..*" SaleItem : saleItems
  Sale     "1" --> "0..*" SaleItem : items
  Customer "1" --> "0..*" Sale : sales
  Customer "1" --> "0..*" CustomerPayment : payments
  Supplier "1" --> "0..*" Purchase : purchases
  Purchase "1" --> "0..*" PurchaseItem : items
  Product  "1" --> "0..*" PurchaseItem : purchaseItems

  Sale --> PaymentMethod
  Purchase --> PurchaseStatus
}

@enduml
